k8s/backend/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
  labels:
    app: backend-app
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 80
      targetPort: 8080
